force-app/main/default/objects/Wire_Transfer__c/Wire_Transfer__c.object-meta.xml
<CustomObject>
    <label>Wire Transfer</label>
    <nameField>
        <displayFormat>WR-{00000}</displayFormat>
        <label>Wire Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wire Transfer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>