force-app/main/default/objects/Wire_Transfer__c/fields/Amount_of_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Transfer__c</fullName>
    <label>Amount of Transfer</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>