force-app/main/default/objects/Wire_Transfer__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>FirstName__c + &apos; &apos; + LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>