force-app/main/default/objects/Wire_Transfer__c/fields/Receiver_LastName__c.field-meta.xml
<CustomField>
    <fullName>Receiver_LastName__c</fullName>
    <label>Receiver LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>