force-app/main/default/objects/Wire_Transfer__c/fields/Reciever_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Reciever_FirstName__c</fullName>
    <label>Reciever FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>