force-app/main/default/objects/Wire_Transfer__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <label>Routing Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>