force-app/main/default/objects/Wire_Transfer__c/fields/Session_Object__c.field-meta.xml
<CustomField>
    <fullName>Session_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Object</label>
    <referenceTo>Session_Object__c</referenceTo>
    <relationshipLabel>Wire Transfer</relationshipLabel>
    <relationshipName>Wire_Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>