force-app/main/default/objects/Wire_Transfer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Amount_of_Transfer__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>